--- a/style.css
+++ b/style.css
@@ -1,1 +1,127 @@
-/* Acá va tu código */
+body{
+    background-image: url("file:///home/laboratoriad310/Escritorio/LaboratoriaFran/cifrado%20cesar/16202801366_5cabe1beea_b.jpg")
+}
+.intro{
+    font-family: 'Josefin Slab', serif;
+    width:50%;
+    display: inline-block;
+    margin-top:40px;
+    font-size:18px;
+
+}
+/* h1{
+    font-family: 'Niconne', cursive;
+} */
+
+
+#mainTitle{
+    font-family: 'Josefin Slab', serif; 
+    margin-top:200px;
+    text-align: center;
+    font-size: 40px;
+    color:rgb(209, 8, 68);
+    text-shadow: 2px 3px 3px rgb(70, 67, 67);
+
+   
+    
+  }
+
+#slogan{
+      font-family: 'Niconne', cursive;
+      position: absolute;
+      text-align: center;
+      width: 40%;
+      height: 0%;
+      font-weight: bold;
+      color:rgb(128, 128,128);
+      font-size: 30px;
+      margin:200px 380px;
+      text-shadow:1px 2px 2px #8981E8;
+      top: 15%;
+
+  }
+
+ 
+#botonInicio{
+    margin-left: 500px;
+    margin-top:150px;
+    
+  } 
+
+}
+  .intro{
+      font-family: 'Josefin Slab', serif;
+      font-size: 22px;
+      margin-right: 40px;
+      width: 40%;
+      text-align: justify;
+      color:whitesmoke;
+      text-shadow:1px 1px 1px rgb(87, 28, 55);      
+      font-weight: 1000;
+      display:inline-block;
+      margin-left:30px;
+      
+      
+  }
+  .title2{
+      width:40%;
+      color: wheat;
+      text-shadow: 2px 2px 3px rgb(87, 28, 55);
+      text-align: center;
+    
+  }
+
+  .intro2{
+    font-family: 'Josefin Slab', serif;
+    font-size: 22px;
+    margin-right: 40px;
+    width: 40%;
+    text-align: justify;
+    color:whitesmoke;
+    text-shadow:1px 1px 1px rgb(87, 28, 55);      
+    font-weight: 1000;
+    display:inline-block;
+    margin-left:500px;
+    
+
+      
+  }
+
+  #intro2P{
+    font-family: 'Josefin Slab', serif;
+    font-size: 22px;
+    margin-right: 40px;
+    text-align: justify;
+    color: #bd093c;
+    text-shadow: 1px 1px 1px rgb(255, 255, 255);
+    font-weight: 1000;
+    display: inline-block;
+    margin-left: 30px;
+
+}
+
+#btnStart2{
+    margin-left:500px;
+}
+  }
+  #instructions1{
+    margin-left:10px;
+  }
+  #pañuelosVerdes{
+     display:inline-block;
+     width:45%;
+     height: 45%;
+     border-radius: 10%;
+     box-shadow: 2px 3px 3px rgb(87, 28, 55);
+     position: absolute;
+     margin-top: 20px;
+     margin-left:40px;
+    };
+
+  .title2{
+      text-align: left;
+      margin-left:200px;
+      color:whitesmoke;
+      text-shadow: 2px 3px 2px rgb(87, 28, 55);  
+          
+  }
