--- a/style.css
+++ b/style.css
@@ -12,33 +12,36 @@ body{
 
 #instructions1{
     
-    width:70%;
-    height:70%;
+    width:700px;
+    height:300px;
     background-color: gray;
     padding: 18px;
     color: black;
     opacity: 0.8;
-    margin-left:190px;
+    margin-left:250px;
     margin-top:150px;
+    text-align: center;
     
 
 }
 
 #intro2P{
-    width:70%;
-    height:70%;
+    width:700px;
+    height:300px;
     background-color: gray;
     padding: 18px;
     color: black;
     opacity: 0.8;
-    margin-left:190px;
+    margin-left:250px;
     margin-top:150px;
+    text-align: center;
 }
+
 #mainTitle{
     font-family: 'Anton', sans-serif;
     text-align: left;
     margin-top: 200px;
-    font-size: 28px;
+    font-size: 20px;
     color: white;
     text-shadow: 1px 1px 2px black;
 
@@ -46,7 +49,7 @@ body{
 
 #slogan{
     font-family: 'Roboto', sans-serif;
-    font-size: 25px;
+    font-size: 20px;
     font-weight: bold;
     color: #014706;
 }
@@ -68,6 +71,44 @@ body{
     font-size: 16px;
     }
 
+#instrucciones9{
+    margin-left: 28px;
+    border-radius: 10px;
+    color: white;
+    background-color: rgb(136, 78, 160);
+    border-color:rgb(74, 35, 90);
+    width: 160px;
+    height: 40px;
+    text-shadow: 1px 1px darkgreen;
+    box-shadow: 2px 2px 2px black;
+    font-size: 19px;
+}
+
+#btnStart3{
+    margin-left: 28px;
+    border-radius: 10px;
+    color: white;
+    background-color: rgb(136, 78, 160);
+    border-color:rgb(74, 35, 90);
+    width: 160px;
+    height: 40px;
+    text-shadow: 1px 1px darkgreen;
+    box-shadow: 2px 2px 2px black;
+    font-size: 19px;
+    margin-top:40px;
+}
+#btnStart2{
+    margin-left: 28px;
+    border-radius: 10px;
+    color: white;
+    background-color: rgb(136, 78, 160);
+    border-color:rgb(74, 35, 90);
+    width: 160px;
+    height: 40px;
+    text-shadow: 1px 1px darkgreen;
+    box-shadow: 2px 2px 2px black;
+    font-size: 19px;
+}
 
 #btnInstructions{
     margin-left: 28px;
@@ -106,7 +147,9 @@ body{
 }
 
 #links{
-    margin-top:180px;
+    margin-top:220px;
+    background-color: rgb(20, 90, 50);
+    height: 50px;
 
 }
 
@@ -119,19 +162,40 @@ body{
     color: black;
     opacity: 0.8;
     margin-left:190px;
-    margin-top:150px;
+    margin-top:90px;
 }
+
 
 #codeBox{
     width: 400px;
     height: 100px;
+    text-align: center;
+    margin-right: 230px;
+    margin-left: 240px;
+
+}
+
+#btnCode{
+    margin-left: 350px;
+    margin-top: 20px;
+    background-color:rgb(30, 132, 73);
+    border-color: rgb(20, 90, 50);
+    color:#ffff;
+
+}
+
+#btnDecode{
+    background-color:rgb(30, 132, 73);
+    border-color: rgb(20, 90, 50);
+    color:#ffff;
 }
 
 #decodeBox{
     width:400px;
     height:100px;
-    margin-left: 132px;
-    margin-top: 60px;
+    margin-left: 240px;
+    margin-top: 40px;
+    color:black;
 }
 
 #btnHome{
@@ -141,4 +205,26 @@ body{
 
 #letStart{
     text-align: center;
+    margin-top:-70px;
+}
+
+#clear{
+    margin-left:380px;
+    color: white;
+    background-color: rgb(136, 78, 160);
+    border-color:rgb(74, 35, 90);
+}
+
+#btnSend{
+    margin-left: 340px;
+    margin-top: 15px;
+    color: white;
+    background-color: rgb(136, 78, 160);
+    border-color:rgb(74, 35, 90);
+}
+
+#btnCopy{
+    color: white;
+    background-color: rgb(136, 78, 160);
+    border-color:rgb(74, 35, 90);
 }
