--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     margin:0px;
 }
 body{
-    background-image:url("fhttps://raw.githubusercontent.com/FranciscaMora/scl-2018-11-bc-core-cipher/gh-pages/background.jpg");
+    background-image:url("https://raw.githubusercontent.com/FranciscaMora/scl-2018-11-bc-core-cipher/gh-pages/background.jpg");
     background-position: top;
     background-size: auto;
     width:100%;
